clusters/deleted-grv-euw1/default/app-amd-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amdsimplemultiarchapp
  namespace: default
spec:
  selector:
    matchLabels:
      app: amdsimplemultiarchapp
  template:
    metadata:
      labels:
        app: amdsimplemultiarchapp
    spec:
      nodeSelector:
        karpenter.sh/provisioner-name: tlvsummit23amd
      serviceAccountName: appsimulator
      containers:
      - name: app
        image: 907513986313.dkr.ecr.eu-west-1.amazonaws.com/simplemultiarchimage:multiarch-py3
        imagePullPolicy: Always
        command: ["/usr/src/app/start.sh"]
        resources:
          requests:
            cpu: 1000m
            #memory: 7168Mi        
          limits:
            cpu: 4000m
            #memory: 7168Mi        
        ports:
          - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /app/health/
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /app/health/
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
